syntax = "proto3";

package myassembly.v1;

message ValidationUnitSchema {
  string prop_name = 1;
  string name_ja = 2;
  string name_en = 3;
  string value_type = 4;
  string unit_type = 5;
  int64 created_at = 6;
}

message GetValidationUnitSchemaRequest {
  string unit_type = 1;
}

message GetValidationUnitSchemaResponse {
  repeated ValidationUnitSchema items = 1;
}

service ValidationUnitSchemaService {
  rpc GetValidationUnitSchema(GetValidationUnitSchemaRequest) returns (GetValidationUnitSchemaResponse) {}
}
