package convert_test

import (
	"sort"
	"testing"
	"time"

	convert "github.com/capybara-alt/my-assemble/convert/job"
	"github.com/capybara-alt/my-assemble/core"
	"github.com/capybara-alt/my-assemble/model"
	"github.com/stretchr/testify/assert"
)

var weapon_schema model.ValidationUnitSchemaList = []model.ValidationUnitSchema{
	{PropName: "pa_interference", NameJa: "PA干渉", NameEn: "PA Interference", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "cooling", NameJa: "冷却性能", NameEn: "Cooling", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "recoil", NameJa: "射撃反動", NameEn: "Recoil", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "tk_heat_buildup", NameJa: "展開時発熱", NameEn: "TK Heat BuildUp", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "deployment_range", NameJa: "展開範囲", NameEn: "Deployment Range", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "ammunition_cost", NameJa: "弾単価", NameEn: "Ammunition Cost", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "magazine_rounds", NameJa: "マガジン弾数", NameEn: "Magazine Rounds", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "ideal_range", NameJa: "性能保証射程", NameEn: "Ideal Range", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "attack_power", NameJa: "攻撃力", NameEn: "Attack Power", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "atk_heat_buildup", NameJa: "攻撃時発熱", NameEn: "ATK Heat Buildup", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "damage_mitigation", NameJa: "攻撃軽減", NameEn: "Damage Mitigation", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "impact_dampening", NameJa: "衝撃軽減", NameEn: "Impact Dampening", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "idle_damage_mitigation", NameJa: "アイドリング攻撃軽減", NameEn: "Idle Damage Mitigation", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "idle_time", NameJa: "アイドリング時間", NameEn: "Idle Time", ValueType: "FLOAT", UnitType: "WEAPON"},
	{PropName: "idle_impact_mitigation", NameJa: "アイドリング衝撃軽減", NameEn: "Idle Impact Mitigation", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "reload_time", NameJa: "リロード時間", NameEn: "Reload Time", ValueType: "FLOAT", UnitType: "WEAPON"},
	{PropName: "max_lock_count", NameJa: "最大ロック数", NameEn: "Max Lock Count", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "effective_range", NameJa: "有効射程", NameEn: "Effective Range", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "blast_radius", NameJa: "爆発範囲", NameEn: "Blast Radius", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "direct_hit_adjustment", NameJa: "直撃補正", NameEn: "Direct Hit Adjustment", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "total_rounds", NameJa: "総弾数", NameEn: "Total Rounds", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "impact", NameJa: "衝撃力", NameEn: "Impact", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "accumulative_impact", NameJa: "衝撃残留", NameEn: "Accumulative Impact", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "guidance", NameJa: "誘導性能", NameEn: "Guidance", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "homing_lock_time", NameJa: "誘導ロック時間", NameEn: "Homing Lock Time", ValueType: "FLOAT", UnitType: "WEAPON"},
	{PropName: "rapid_fire", NameJa: "連射性能", NameEn: "Rapid Fire", ValueType: "FLOAT", UnitType: "WEAPON"},
	{PropName: "consecutive_hits", NameJa: "連続攻撃回数", NameEn: "Consecutive Hits", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "ig_duration", NameJa: "IG持続時間", NameEn: "IG Duration", ValueType: "FLOAT", UnitType: "WEAPON"},
	{PropName: "ig_damage_mitigation", NameJa: "IG攻撃軽減", NameEn: "IG Damage Mitigation", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "ig_impact_dampening", NameJa: "IG衝撃軽減", NameEn: "IG Impact Dampening", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "chg_en_load", NameJa: "チャージEN負荷", NameEn: "Chg. EN Load", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "chg_time", NameJa: "チャージ時間", NameEn: "Chg. Time", ValueType: "FLOAT", UnitType: "WEAPON"},
	{PropName: "chg_attack_power", NameJa: "チャージ攻撃力", NameEn: "Chg. Attack Power", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "chg_heat_buildup", NameJa: "チャージ攻撃時発熱", NameEn: "Chg. Heat Buildup", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "chg_ammo_consumption", NameJa: "チャージ消費弾数", NameEn: "Chg. Ammo Consumption", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "chg_blast_radius", NameJa: "チャージ爆発範囲", NameEn: "Chg. Blast Radius", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "chg_impact", NameJa: "チャージ衝撃力", NameEn: "Chg. Impact", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "chg_accum_impact", NameJa: "チャージ衝撃残留", NameEn: "Chg. Accum Impact", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "full_chg_attack_power", NameJa: "フルチャージ攻撃力", NameEn: "Full Chg. Attack Power", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "full_chg_heat_buildup", NameJa: "フルチャージ攻撃時発熱", NameEn: "Full Chg. Heat Buildup", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "full_chg_ammo_consump", NameJa: "フルチャージ消費弾数", NameEn: "Full Chg. Ammo Consump", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "full_chg_blast_radius", NameJa: "フルチャージ爆発範囲", NameEn: "Full Chg. Blast Radius", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "full_chg_impact", NameJa: "フルチャージ衝撃力", NameEn: "Full Chg. Impact", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "full_chg_accum_impact", NameJa: "フルチャージ衝撃残留", NameEn: "Full Chg. Accum Impact", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "full_chg_time", NameJa: "フルチャージ時間", NameEn: "Full Chg. Time", ValueType: "FLOAT", UnitType: "WEAPON"},
	{PropName: "maker", NameJa: "メーカー", NameEn: "Maker", ValueType: "STRING", UnitType: "WEAPON"},
	{PropName: "en_load", NameJa: "EN負荷", NameEn: "EN Load", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "price", NameJa: "価格", NameEn: "Price", ValueType: "INT", UnitType: "WEAPON"},
	{PropName: "weight", NameJa: "重量", NameEn: "Weight", ValueType: "INT", UnitType: "WEAPON"},
}

func TestConvertWeapon(t *testing.T) {
	tests := []struct {
		name          string
		crawl_results model.CrawlResultJSON
		want          model.Want[[]model.Weapon]
	}{
		{
			name: "[正常系]Cross Weaponの変換",
			crawl_results: model.CrawlResultJSON{
				string(model.CROSS_WEAPON_UNIT_TYPE): {
					"パイルバンカー": {
						"PB-033M ASHMEAD": {
							"カテゴリー":    "PILE BUNKER",
							"メーカー":     "ベイラム",
							"価格":       "185,000",
							"攻撃力":      "1688",
							"衝撃力":      "1150",
							"衝撃残留":     "850",
							"連続攻撃回数":   "1",
							"チャージ攻撃力":  "4630",
							"チャージ衝撃力":  "1800",
							"チャージ衝撃残留": "1100",
							"直撃補正":     "150",
							"PA干渉":     "135",
							"冷却性能":     "284",
							"重量":       "4180",
							"EN負荷":     "225",
						},
					},
					"コーラルオシレータ": {
						"IA-C01W7: ML-REDSHIFT": {
							"カテゴリー":    "CORAL OSCILLATOR",
							"メーカー":     "ルビコン調査技研",
							"価格":       "343,000",
							"攻撃力":      "727",
							"衝撃力":      "530",
							"衝撃残留":     "530",
							"連続攻撃回数":   "2",
							"チャージ攻撃力":  "1614",
							"チャージ衝撃力":  "820",
							"チャージ衝撃残留": "820",
							"直撃補正":     "190",
							"PA干渉":     "126",
							"有効射程":     "280",
							"冷却性能":     "209",
							"重量":       "2200",
							"EN負荷":     "544",
						},
						"IB-C03W2: WLT 101": {
							"カテゴリー":    "CORAL OSCILLATOR",
							"メーカー":     "ルビコン調査技研",
							"価格":       "368,000",
							"攻撃力":      "1350",
							"衝撃力":      "960",
							"衝撃残留":     "960",
							"連続攻撃回数":   "1",
							"チャージ攻撃力":  "1950",
							"チャージ衝撃力":  "1450",
							"チャージ衝撃残留": "1450",
							"直撃補正":     "210",
							"PA干渉":     "140",
							"冷却性能":     "199",
							"重量":       "2030",
							"EN負荷":     "642",
						},
					},
				},
			},
			want: model.Want[[]model.Weapon]{
				Value: []model.Weapon{
					{
						Unit:                string(model.CROSS_WEAPON_UNIT_TYPE),
						Category:            "パイルバンカー",
						Name:                "PB-033M ASHMEAD",
						Maker:               "ベイラム",
						Price:               185000,
						AttackPower:         "1688",
						Impact:              "1150",
						AccumulativeImpact:  "850",
						ConsecutiveHits:     1,
						ChgAttackPower:      "4630",
						ChgImpact:           "1800",
						ChgAccumImpact:      "1100",
						DirectHitAdjustment: 150,
						PAInterference:      135,
						Cooling:             284,
						Weight:              4180,
						ENLoad:              225,
						CreatedAt:           time.Now(),
					},
					{
						Unit:                string(model.CROSS_WEAPON_UNIT_TYPE),
						Category:            "コーラルオシレータ",
						Name:                "IA-C01W7: ML-REDSHIFT",
						Maker:               "ルビコン調査技研",
						Price:               343000,
						AttackPower:         "727",
						Impact:              "530",
						AccumulativeImpact:  "530",
						ConsecutiveHits:     2,
						ChgAttackPower:      "1614",
						ChgImpact:           "820",
						ChgAccumImpact:      "820",
						DirectHitAdjustment: 190,
						PAInterference:      126,
						EffectiveRange:      280,
						Cooling:             209,
						Weight:              2200,
						ENLoad:              544,
						CreatedAt:           time.Now(),
					},
					{
						Unit:                string(model.CROSS_WEAPON_UNIT_TYPE),
						Category:            "コーラルオシレータ",
						Name:                "IB-C03W2: WLT 101",
						Maker:               "ルビコン調査技研",
						Price:               368000,
						AttackPower:         "1350",
						Impact:              "960",
						AccumulativeImpact:  "960",
						ConsecutiveHits:     1,
						ChgAttackPower:      "1950",
						ChgImpact:           "1450",
						ChgAccumImpact:      "1450",
						DirectHitAdjustment: 210,
						PAInterference:      140,
						Cooling:             199,
						Weight:              2030,
						ENLoad:              642,
						CreatedAt:           time.Now(),
					},
				},
				ErrMsg: "",
			},
		},
		{
			name: "[正常系]Arm Weaponの変換",
			crawl_results: model.CrawlResultJSON{
				string(model.DEFAULT_WEAPON_ARM_UNIT_TYPE): {
					"バーストライフル": {
						"MA-J-200 RANSETSU-RF": {
							"カテゴリー":    "BURST RIFLE",
							"メーカー":     "BAWS",
							"価格":       "105,000",
							"攻撃力":      "224",
							"衝撃力":      "245",
							"衝撃残留":     "91",
							"チャージ攻撃力":  "224×3",
							"チャージ衝撃力":  "245×3",
							"チャージ衝撃残留": "91×3",
							"直撃補正":     "220",
							"射撃反動":     "12",
							"性能保証射程":   "180",
							"有効射程":     "321",
							"連射性能":     "1.5",
							"チャージ時間":   "0.7",
							"マガジン弾数":   "15",
							"総弾数":      "375",
							"リロード時間":   "1.8",
							"弾単価":      "100",
							"重量":       "4210",
							"EN負荷":     "158",
						},
					},
					"リニアライフル": {
						"LR-037 HARRIS": {
							"カテゴリー":     "LINEAR RIFLE",
							"メーカー":      "ベイラム",
							"価格":        "135,000",
							"攻撃力":       "239",
							"衝撃力":       "285",
							"衝撃残留":      "109",
							"チャージ攻撃力":   "977 (+127)",
							"チャージ衝撃力":   "1250",
							"チャージ衝撃残留":  "380",
							"チャージ攻撃時発熱": "1000",
							"直撃補正":      "220",
							"射撃反動":      "35",
							"性能保証射程":    "195",
							"有効射程":      "376",
							"連射性能":      "1.3",
							"チャージ時間":    "0.8 (-0.7)",
							"マガジン弾数":    "10",
							"総弾数":       "360",
							"リロード時間":    "3",
							"冷却性能":      "350 (+60)",
							"弾単価":       "200",
							"重量":        "4840",
							"EN負荷":      "441",
						},
					},
				},
			},
			want: model.Want[[]model.Weapon]{
				Value: []model.Weapon{
					{
						Unit:                string(model.DEFAULT_WEAPON_ARM_UNIT_TYPE),
						Category:            "バーストライフル",
						Name:                "MA-J-200 RANSETSU-RF",
						Maker:               "BAWS",
						Price:               105000,
						AttackPower:         "224",
						Impact:              "245",
						AccumulativeImpact:  "91",
						ChgAttackPower:      "224×3",
						ChgImpact:           "245×3",
						ChgAccumImpact:      "91×3",
						DirectHitAdjustment: 220,
						Recoil:              12,
						IdealRange:          180,
						EffectiveRange:      321,
						RapidFire:           1.5,
						ChgTime:             0.7,
						MagazineRounds:      15,
						TotalRounds:         375,
						ReloadTime:          1.8,
						AmmunitionCost:      "100",
						Weight:              4210,
						ENLoad:              158,
						CreatedAt:           time.Now(),
					},
					{
						Unit:                string(model.DEFAULT_WEAPON_ARM_UNIT_TYPE),
						Category:            "リニアライフル",
						Name:                "LR-037 HARRIS",
						Maker:               "ベイラム",
						Price:               135000,
						AttackPower:         "239",
						Impact:              "285",
						AccumulativeImpact:  "109",
						ChgAttackPower:      "977",
						ChgImpact:           "1250",
						ChgAccumImpact:      "380",
						ChgHeatBuildup:      1000,
						DirectHitAdjustment: 220,
						Recoil:              35,
						IdealRange:          195,
						EffectiveRange:      376,
						RapidFire:           1.3,
						ChgTime:             0.8,
						MagazineRounds:      10,
						TotalRounds:         360,
						ReloadTime:          3,
						Cooling:             350,
						AmmunitionCost:      "200",
						Weight:              4840,
						ENLoad:              441,
						CreatedAt:           time.Now(),
					},
				},
				ErrMsg: "",
			},
		},
		{
			name: "[正常系]Shield Weaponの変換",
			crawl_results: model.CrawlResultJSON{
				string(model.SHIELD_WEAPON_UNIT_TYPE): {
					"パルスシールド": {
						"VP-61PS": {
							"カテゴリー":  "PULSE SHIELD",
							"メーカー":   "アーキバス",
							"価格":     "123,000",
							"攻撃軽減":   "58",
							"衝撃軽減":   "40",
							"IG攻撃軽減": "78",
							"IG衝撃軽減": "80",
							"IG持続時間": "0.6",
							"展開時発熱":  "190",
							"展開範囲":   "180",
							"冷却性能":   "144",
							"重量":     "2700",
							"EN負荷":   "310",
						},
					},
					"パルスバックラー": {
						"VP-61PB": {
							"カテゴリー":  "PULSE BUCKLER",
							"メーカー":   "アーキバス",
							"価格":     "76,000",
							"攻撃軽減":   "35",
							"衝撃軽減":   "35",
							"IG攻撃軽減": "96",
							"IG衝撃軽減": "95",
							"IG持続時間": "0.3",
							"展開時発熱":  "480",
							"展開範囲":   "180",
							"冷却性能":   "132",
							"重量":     "1920",
							"EN負荷":   "285",
						},
					},
				},
			},
			want: model.Want[[]model.Weapon]{
				Value: []model.Weapon{
					{
						Unit:               string(model.SHIELD_WEAPON_UNIT_TYPE),
						Category:           "パルスシールド",
						Maker:              "アーキバス",
						Name:               "VP-61PS",
						Price:              123000,
						DamageMitigation:   58,
						ImpactDampening:    40,
						IGDamageMitigation: 78,
						IGImpactDampening:  80,
						IGDuration:         0.6,
						TKHeatBuildup:      190,
						DeploymentRange:    180,
						Cooling:            144,
						Weight:             2700,
						ENLoad:             310,
						CreatedAt:          time.Now(),
					},
					{
						Unit:               string(model.SHIELD_WEAPON_UNIT_TYPE),
						Category:           "パルスバックラー",
						Maker:              "アーキバス",
						Name:               "VP-61PB",
						Price:              76000,
						DamageMitigation:   35,
						ImpactDampening:    35,
						IGDamageMitigation: 96,
						IGImpactDampening:  95,
						IGDuration:         0.3,
						TKHeatBuildup:      480,
						DeploymentRange:    180,
						Cooling:            132,
						Weight:             1920,
						ENLoad:             285,
						CreatedAt:          time.Now(),
					},
				},
				ErrMsg: "",
			},
		},
		{
			name: "[正常系]Back Unit Weaponの変換",
			crawl_results: model.CrawlResultJSON{
				string(model.DEFAULT_WEAPON_BACK_UNIT_TYPE): {
					"ミサイル": {
						"BML-G1/P20MLT-04": {
							"カテゴリー":   "MISSILE",
							"メーカー":    "ファーロン・ダイナミクス",
							"価格":      "74,000",
							"攻撃力":     "103×4",
							"衝撃力":     "72×4",
							"衝撃残留":    "43×4",
							"直撃補正":    "145",
							"誘導性能":    "180",
							"有効射程":    "2500",
							"誘導ロック時間": "0.3",
							"最大ロック数":  "4",
							"総弾数":     "140",
							"リロード時間":  "4",
							"弾単価":     "80",
							"重量":      "2120",
							"EN負荷":    "154",
						},
					},
					"双対ミサイル": {
						"BML-G1/P31DUO-02": {
							"カテゴリー":   "DUAL MISSILE",
							"メーカー":    "ファーロン・ダイナミクス",
							"価格":      "144,000",
							"攻撃力":     "148×4 (+26)",
							"衝撃力":     "94×4 (+18)",
							"衝撃残留":    "62×4 (+12)",
							"直撃補正":    "150",
							"誘導性能":    "145 (+20)",
							"有効射程":    "500",
							"誘導ロック時間": "0.4",
							"最大ロック数":  "2",
							"総弾数":     "124",
							"リロード時間":  "3.5",
							"弾単価":     "70",
							"重量":      "1900",
							"EN負荷":    "182",
						},
					},
				},
			},
			want: model.Want[[]model.Weapon]{
				Value: []model.Weapon{
					{
						Unit:                string(model.DEFAULT_WEAPON_BACK_UNIT_TYPE),
						Category:            "ミサイル",
						Name:                "BML-G1/P20MLT-04",
						Maker:               "ファーロン・ダイナミクス",
						Price:               74000,
						AttackPower:         "103×4",
						Impact:              "72×4",
						AccumulativeImpact:  "43×4",
						DirectHitAdjustment: 145,
						Guidance:            180,
						EffectiveRange:      2500,
						HomingLockTime:      0.3,
						MaxLockCount:        4,
						TotalRounds:         140,
						ReloadTime:          4,
						AmmunitionCost:      "80",
						Weight:              2120,
						ENLoad:              154,
						CreatedAt:           time.Now(),
					},
					{
						Unit:                string(model.DEFAULT_WEAPON_BACK_UNIT_TYPE),
						Category:            "双対ミサイル",
						Name:                "BML-G1/P31DUO-02",
						Maker:               "ファーロン・ダイナミクス",
						Price:               144000,
						AttackPower:         "148×4",
						Impact:              "94×4",
						AccumulativeImpact:  "62×4",
						DirectHitAdjustment: 150,
						Guidance:            145,
						EffectiveRange:      500,
						HomingLockTime:      0.4,
						MaxLockCount:        2,
						TotalRounds:         124,
						ReloadTime:          3.5,
						AmmunitionCost:      "70",
						Weight:              1900,
						ENLoad:              182,
						CreatedAt:           time.Now(),
					},
				},
				ErrMsg: "",
			},
		},
	}

	core.SetFakeTime(time.Now())
	for _, tt := range tests {
		c := convert.NewWeaponList(weapon_schema)
		v, err := c.Convert(tt.crawl_results)
		sort.SliceStable(v, func(i, j int) bool {
			return v[i].Name < v[j].Name
		})
		sort.SliceStable(tt.want.Value, func(i, j int) bool {
			return tt.want.Value[i].Name < tt.want.Value[j].Name
		})
		t.Run(tt.name, func(t *testing.T) {
			if err != nil {
				assert.EqualError(t, err, tt.want.ErrMsg)
			}
			assert.Equal(t, v, tt.want.Value)
		})
	}
}
